--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-#### Avant toute chose bienvenue dans le projet du groupe constitué de Delenn Decambron - Maxime Bloise - Ryan Carlet et Zyad Zain El Abidine ####
+#### PROJET de Maxime BLOISE - Ryan CARLET - Zyad Zain EL ABIDINE - Delenn DECAMBRON ####
 
 
 # Gestionnaire de Fichiers avec Authentification
